--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, 
+body {
+    height: 100%; 
+}
+
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background: #303030;
+    color: rgb(41, 40, 40);
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
