[add] - menambahkan fitur update resep

--- a/src/app/pages/recipe-card/recipe-card.component.html
+++ b/src/app/pages/recipe-card/recipe-card.component.html
@@ -10,9 +10,23 @@
         Lagi galau? Nyeblak aja hehe.
       </p>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+    <mat-card-actions class="flex justify-between">
+      <div>
+        <button mat-icon-button aria-label="Example icon button with a home icon">
+          <mat-icon>favorite</mat-icon>
+        </button>
+        <button (click)="handleOpenEditRecipeForm()" mat-icon-button aria-label="Example icon button with a home icon">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button aria-label="Example icon button with a home icon">
+          <mat-icon>share</mat-icon>
+        </button>
+      </div>
+      <div>
+        <button mat-icon-button aria-label="Example icon button with a home icon">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
     </mat-card-actions>
 </mat-card>
   
