--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,12 @@
 
 <div>
   <div class="min-h-[91vh]">
-    <app-navbar/>
-    <app-home-page/>
+    <!-- <app-navbar/> -->
+    <!-- <app-home-page/> -->
+     <app-auth/>
   </div>
 
   <div> 
-    <app-footer/>
+    <!-- <app-footer/> -->
   </div>
 </div>
