[add] - menambahkan services auth, recipe, dan fitur create recipe connect backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,14 @@
 
 <div>
   <div class="min-h-[91vh]">
-    <!-- <app-navbar/> -->
-    <!-- <app-home-page/> -->
-     <app-auth/>
+    <app-navbar/>
+
+    @if (user) {
+      <app-home-page/>
+    }
+    @else {
+      <app-auth/>
+    }
   </div>
 
   <div> 
