--- a/src/app/pages/recipe-card/recipe-card.component.html
+++ b/src/app/pages/recipe-card/recipe-card.component.html
@@ -26,7 +26,7 @@
         </button>
       </div>
       <div>
-        <button mat-icon-button aria-label="Example icon button with a home icon">
+        <button (click)="handleDeleteRecipe()" mat-icon-button aria-label="Example icon button with a home icon">
           <mat-icon>delete</mat-icon>
         </button>
       </div>
